--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
+    "sails-migrations": "^2.0.6",
     "sails-postgresql": "^0.10.14"
   },
   "scripts": {
