--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "npm": ">=2.1"
   },
   "dependencies": {
+    "barrels": "^1.4.0",
+    "bcryptjs": "^2.1.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
+    "grunt-autoprefixer": "^2.2.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.3.0",
@@ -26,11 +29,19 @@
     "include-all": "~0.1.3",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
+    "passport": "^0.2.1",
+    "passport-facebook": "^2.0.0",
+    "passport-github": "^0.1.5",
+    "passport-google-oauth": "^0.1.5",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
+    "sails-generate-auth": "^0.2.0",
     "sails-migrations": "^2.0.6",
-    "sails-postgresql": "^0.10.14"
+    "sails-postgresql": "^0.10.14",
+    "validator": "^3.33.0"
   },
   "scripts": {
     "start": "node app.js",
@@ -44,15 +55,5 @@
   "author": "ittybitty",
   "license": "",
   "devDependencies": {
-    "bcryptjs": "^2.1.0",
-    "grunt-autoprefixer": "^2.2.0",
-    "passport": "^0.2.1",
-    "passport-facebook": "^2.0.0",
-    "passport-github": "^0.1.5",
-    "passport-google-oauth": "^0.1.5",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.3",
-    "sails-generate-auth": "^0.2.0",
-    "validator": "^3.33.0"
   }
 }
