--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "include-all": "~0.1.3",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
-    "passport": "^0.2.1",
     "passport-facebook": "^2.0.0",
     "passport-github": "^0.1.5",
     "passport-google-oauth": "^0.1.5",
@@ -54,6 +53,5 @@
   },
   "author": "ittybitty",
   "license": "",
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
